Fixed the spacing and alignment on the Suprematism text.

--- a/CSS/burke.css
+++ b/CSS/burke.css
@@ -66,8 +66,8 @@
 #insp-text-align
 {
     width: 100%;
-    margin-top: 90px;
-    margin-right: 175px
+    margin-top: 75px;
+    margin-right: 180px
 }
 
 /* Used for the inspiration image's text. */
